# the-big-thing

./: .gitignore  README.md  config.example.json  portfolio.example.json  pyproject.toml  walkthrough.ipynb
scripts/: daily_report.py  setup_scheduler.bat
src/bigthing/: __init__.py  __main__.py  allocator.py  cli.py  config.py  data_provider.py  emailer.py  factors.py  health.py  pipeline.py  portfolio.py  recommend.py  regime.py  scanner.py  scoring.py  universe.py  utils.py
